<resources>
    <string name="app_name">CalendarApp</string>
    <string name="label_email">Email</string>
    <string name="label_password">password</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="empty_fields">Please enter email and password</string>
    <string name="error_registration_failed">Registration failed:</string>
    <string name="error_login_failed">Login failed</string>
    <string name="error_email_already_registered">This email is already registered. Try logging in instead.</string>
    <string name="error_invalid_email">Invalid email address</string>"
    <string name="error_invalid_password">Password must be at least 6 characters long</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="success_registration">Registration successful</string>
    <string name="success_login">Login successful</string>
    <string name="error_firebase_auth">Firebase Authentication Error:</string>"
    <string name="error_firebase_firestore">Firebase Firestore Error:</string>
    <string name="hint_enter_email">Enter your Email</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="error_empty_field">Email and password cannot be empty</string>
    <string name="announcements">Announcements</string>
    <string name="password_no_match">Password do not match</string>
    <string name="empty_registration_fields">Please enter missing fields</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="organization">Organization</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="juan">Juan</string>
    <string name="martinez">Martinez</string>
    <string name="email_domain">email@domain</string>
    <string name="hash">******</string>
    <string name="conform_password">Conform Password</string>
    <string name="or_sign_in_with_email">Or sign in with email</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="save_and_continue">Save and Continue</string>
    <string-array name="organizations">
        <item>Elders Quorum</item>
        <item>Relief Society</item>
        <item>Primary</item>
        <item>Bishopric</item>
        <item>Sunday School</item>
        <item>Missionary Work</item>
        <item>Family History</item>
    </string-array>
    <string name="default_web_client_id">262098687337-vt01o8jr1vlhl2s3oev2gp299d5bf4lj.apps.googleusercontent.com</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="announcements_for">Announcements for:</string>
    <string name="user_information">User Information</string>
    <string name="username">Username</string>
    <string name="my_announcements">My announcements</string>
    <string name="save_changes">Save Changes</string>
</resources>

